# Sample-Code

Backgammon - Rust/: Cargo.toml  README.txt
Backgammon - Rust/8/8.1/: makefile
Backgammon - Rust/8/8.1/backgammon/: Cargo.toml
Backgammon - Rust/8/8.1/backgammon/src/: main.rs
Backgammon - Rust/src/: administrator.rs  board.rs  dice_tracker.rs  lib.rs  local_remote.rs  mod.rs  move.rs  net_config.rs  network_player.rs  parser.rs  player.rs  player_board.rs  tcp_handler.rs  turn_tree.rs
Backgammon - Rust/src/strategy/: bopsy.rs  rando.rs  smarty.rs
Backgammon - Rust/src/tournament/: round_robin.rs  single_elim.rs  tournament.rs
Backgammon - Rust/tests/: admin_cheaters.rs
Backgammon - Rust/tests/cheating_players/: mod.rs
Run n' Gun (Video Game) - C#/: README.txt
System_of_Particle_Systems - JavaScript/: HoegJack_CForcer.js  HoegJack_CLimit.js  HoegJack_Camera.js  HoegJack_Defs.js  HoegJack_Emitter.js  HoegJack_GUI.css  HoegJack_GUI.js  HoegJack_PartSys.js  HoegJack_ProjA.html  HoegJack_ProjA.js  HoegJack_StaticObj.js  README.txt
System_of_Particle_Systems - JavaScript/lib/: cuon-utils.js  gl-matrix.js
