[package]
name = "backgammon_lib"
version = "0.9.0"
authors = ["Ben McCormick <me@benm.cc>", "Jack Hoeg"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "backgammon_lib"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
#elapsed = "0.1"
rand = "0.8.3"
crossbeam = "0.8.0"