[package]
name = "backgammon"
version = "0.8.1"
authors = ["Ben McCormick <me@benm.cc>", "Jack Hoeg"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backgammon_lib = { version = "*", path = "../../../" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
elapsed = "0.1"
rand = "0.8.3"